--- a/dot_files/tmux.conf
+++ b/dot_files/tmux.conf
@@ -10,8 +10,10 @@
 
 
 # Use Shift-arrow keys without prefix key to switch panes
+bind -n S-Down select-pane -D
 bind -n S-Left select-pane -L
 bind -n S-Right select-pane -R
+bind -n S-Up select-pane -U
 
 # Alt + arrow keys to switch windows
 bind -n M-Left  previous-window
