Now using shell function to scan the directories
- Got finally rid of `for i in $(ls -A)'!!
- func_to_files() lives in config.conf. It applies func()
  to all the files in the $1 directory, scanning recursively.
  However, this does not mean that this repo supports subdirectories
  yet.

On branch FEAT_subd

Changes to be committed:
	modified:   config.conf
	modified:   config_installer.sh
	modified:   config_uninstaller.sh
	modified:   README.md

--- a/config.conf
+++ b/config.conf
@@ -23,3 +23,29 @@ CUSTOM_BAR="###################################"
 # File name for a temp file.
 TEMP_FILE="r4nd0m_f1l3n4m3"
 
+
+######################
+#Functions
+######################
+
+# func_to_files
+# Invocation: func_to_files *
+# Applies the shell function func() to the regular and not hidden
+# files under the current directory.
+
+
+# func() must only receive 1 argument, the path between the pwd and
+# a file
+
+func_to_files() {
+while [ "$1" ]; do
+	if [ -d "$1" ]; then
+		func_to_files "$1"/*
+	else
+		if [ -f "$1" ] ; then
+			func "$1"
+		fi
+	fi
+shift
+done
+}
