--- a/config.conf
+++ b/config.conf
@@ -5,6 +5,8 @@
 # Both scripts source this file before execution, to get the latest
 # preferences
 
+set -e
+
 # Folder where the edits to configs are stored
 CONFIG_FOLDER="./dot_files/"
 
@@ -17,8 +19,17 @@ SCRIPTS_FOLDER="./tmux_stuff/"
 # Destination for scripts
 SCRIPTS_PATH="$HOME/bin/"
 
-# Line that separates the original config from the customizations
-CUSTOM_BAR="###################################"
+# How many times should the first line be repeated, given a certain file
+separator_calc() {
+
+	if [ -f "$1" ] ; then
+		yes $(head -n 1 -- "$1") | head -n 32 | tr -d '\n'
+	else
+		printf "Error: %s is not a file. Exiting." "$1" >&2
+		exit 2
+	fi
+}
+
 
 # File name for a temp file.
 TEMP_FILE=$(mktemp)
@@ -37,15 +48,18 @@ TEMP_FILE=$(mktemp)
 # func() must only receive 1 argument, the path between the pwd and
 # a file
 
+
+func() {}
+
 func_to_files() {
-while [ "$1" ]; do
-	if [ -d "$1" ]; then
-		func_to_files "$1"/*
-	else
-		if [ -f "$1" ] ; then
-			func "$1"
+	while [ "$1" ] ; do
+		if [ -d "$1" ] ; then
+			func_to_files "$1"/*
+		else
+			if [ -f "$1" ] ; then
+				func "$1"
+			fi
 		fi
-	fi
-shift
-done
+		shift
+	done
 }
